--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,5 +1,37 @@
 header {
   display: flex;
   justify-content: space-between;
-  padding: 10px 40px;
+  padding: 1.5em 2em;
+}
+
+.logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  img {
+    display: block;
+    width: 5em;
+  }
+}
+
+h1 {
+  font-size: 1.5em;
+}
+
+h2 {
+  margin: 10px 0;
+  font-weight: bold;
+}
+
+.about {
+  a {
+    color: inherit;
+    text-decoration-thickness: 0.05em;
+  }
+
+  a:hover {
+    text-decoration-thickness: 0.1em;
+  }
 }
