--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -53,7 +53,7 @@ input {
     background-color: #f2f2f2;
   }
 
-  th[scope=row] {
+  th[scope='row'] {
     padding-top: 12px;
     padding-bottom: 12px;
     font-weight: bold;
