--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" dir="ltr">
+<html dir="ltr" lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Sentiment analysis</title>
@@ -9,8 +9,8 @@
     <header>
       <div class="logo">
         <img
+          alt="The logo of the Sentiment Analysis application. It shows a stylized head with a cogwheel spinning. It was chosen to convey the fact that the application uses ML (Machine Learning) and NLP (Natural Language Processing)."
           src="../icons/nlp.png"
-          alt="The logo of the Sentiment Analysis application. It shows a stylized head with a cogwheel spinning. It was chosen to convey the fact that the applicatino uses ML (Machine Learning) and NLP (Natural Language Processing)."
         />
       </div>
       <h1>Sentiment analysis</h1>
@@ -22,17 +22,17 @@
         <form class="" onsubmit="return clientlib.handleSubmit(event)">
           <input
             id="target-url"
-            type="text"
             name="target-url"
-            value=""
             placeholder="Enter the URL of a web page to do sentiment analysis on"
+            type="text"
+            value=""
           />
           <input
             id="submit-btn"
-            type="submit"
             name="submit-btn"
-            value="Submit"
             onclick="return clientlib.handleSubmit(event)"
+            type="submit"
+            value="Submit"
           />
         </form>
       </section>
@@ -80,7 +80,7 @@
     <footer>
       <p>
         © Udacity / Changes by Etienne Richard /
-        <a href="https://www.flaticon.com/free-icons/nlp" title="nlp icons"
+        <a ref="https://www.flaticon.com/free-icons/nlp" title="nlp icons"
           >NLP icons created by Freepik - Flaticon</a
         >
       </p>
