doc: Update README and minor changes

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -80,7 +80,7 @@
     <footer>
       <p>
         © Udacity / Changes by Etienne Richard /
-        <a ref="https://www.flaticon.com/free-icons/nlp" title="nlp icons"
+        <a href="https://www.flaticon.com/free-icons/nlp" title="nlp icons"
           >NLP icons created by Freepik - Flaticon</a
         >
       </p>
